--- a/src/linux/magicbox/linux-2.6.17/drivers/char/Makefile
+++ b/src/linux/magicbox/linux-2.6.17/drivers/char/Makefile
@@ -26,6 +26,7 @@ obj-$(CONFIG_CYCLADES)		+= cyclades.o
 obj-$(CONFIG_STALLION)		+= stallion.o
 obj-$(CONFIG_ISTALLION)		+= istallion.o
 obj-$(CONFIG_DIGIEPCA)		+= epca.o
+obj-$(CONFIG_IBM_OCP_GPIO)      += ibm_ocp_gpio.o
 obj-$(CONFIG_SPECIALIX)		+= specialix.o
 obj-$(CONFIG_MOXA_INTELLIO)	+= moxa.o
 obj-$(CONFIG_A2232)		+= ser_a2232.o generic_serial.o
