current magicbox release
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@4152 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/magicbox/linux-2.6.17/arch/ppc/Makefile
+++ b/src/linux/magicbox/linux-2.6.17/arch/ppc/Makefile
@@ -17,14 +17,14 @@ HAS_BIARCH	:= $(call cc-option-yn, -m32)
 ifeq ($(HAS_BIARCH),y)
 AS		:= $(AS) -a32
 LD		:= $(LD) -m elf32ppc
-CC		:= $(CC) -m32
+CC		:= $(CC) -m32 
 endif
 
 LDFLAGS_vmlinux	:= -Ttext $(KERNELLOAD) -Bstatic
 # The -Iarch/$(ARCH)/include is temporary while we are merging
 CPPFLAGS	+= -Iarch/$(ARCH) -Iarch/$(ARCH)/include
 AFLAGS		+= -Iarch/$(ARCH)
-CFLAGS		+= -Iarch/$(ARCH) -msoft-float -pipe \
+CFLAGS		+= -Iarch/$(ARCH) -mcpu=405 -mtune=405 -msoft-float -pipe \
 		-ffixed-r2 -mmultiple
 
 # No AltiVec instruction when building kernel
