--- a/src/linux/magicbox/linux-2.6.17/drivers/Makefile
+++ b/src/linux/magicbox/linux-2.6.17/drivers/Makefile
@@ -67,6 +67,7 @@ obj-$(CONFIG_MCA)		+= mca/
 obj-$(CONFIG_EISA)		+= eisa/
 obj-$(CONFIG_CPU_FREQ)		+= cpufreq/
 obj-$(CONFIG_MMC)		+= mmc/
+obj-$(CONFIG_MMC_MAGICBOX)	+= mmc/
 obj-$(CONFIG_NEW_LEDS)		+= leds/
 obj-$(CONFIG_INFINIBAND)	+= infiniband/
 obj-$(CONFIG_IPATH_CORE)	+= infiniband/
