--- a/src/linux/magicbox/linux-2.6.17/net/ipv4/netfilter/Makefile
+++ b/src/linux/magicbox/linux-2.6.17/net/ipv4/netfilter/Makefile
@@ -87,6 +87,7 @@ obj-$(CONFIG_IP_NF_TARGET_TCPMSS) += ipt_TCPMSS.o
 obj-$(CONFIG_IP_NF_TARGET_CLUSTERIP) += ipt_CLUSTERIP.o
 obj-$(CONFIG_IP_NF_TARGET_TTL) += ipt_TTL.o
 obj-$(CONFIG_IP_NF_TARGET_IMQ) += ipt_IMQ.o
+obj-$(CONFIG_IP_NF_AUTOFW) += ip_autofw.o
 
 # generic ARP tables
 obj-$(CONFIG_IP_NF_ARPTABLES) += arp_tables.o
