--- a/src/linux/magicbox/linux-2.6.17/drivers/ide/Makefile
+++ b/src/linux/magicbox/linux-2.6.17/drivers/ide/Makefile
@@ -32,10 +32,12 @@ ide-core-$(CONFIG_BLK_DEV_FALCON_IDE)	+= legacy/falconide.o
 ide-core-$(CONFIG_BLK_DEV_GAYLE)	+= legacy/gayle.o
 ide-core-$(CONFIG_BLK_DEV_MAC_IDE)	+= legacy/macide.o
 ide-core-$(CONFIG_BLK_DEV_Q40IDE)	+= legacy/q40ide.o
+ide-core-$(CONFIG_BLK_DEV_CFIDE)	+= legacy/cfide.o
 
 # built-in only drivers from ppc/
 ide-core-$(CONFIG_BLK_DEV_MPC8xx_IDE)	+= ppc/mpc8xx.o
 ide-core-$(CONFIG_BLK_DEV_IDE_PMAC)	+= ppc/pmac.o
+ide-core-$(CONFIG_BLK_DEV_MAGICBOX_IDE)	+= ppc/magicbox_ide.o
 
 # built-in only drivers from h8300/
 ide-core-$(CONFIG_H8300)		+= h8300/ide-h8300.o
