--- a/src/linux/magicbox/linux-2.6.17/drivers/mmc/Makefile
+++ b/src/linux/magicbox/linux-2.6.17/drivers/mmc/Makefile
@@ -23,6 +23,7 @@ obj-$(CONFIG_MMC_WBSD)		+= wbsd.o
 obj-$(CONFIG_MMC_AU1X)		+= au1xmmc.o
 obj-$(CONFIG_MMC_OMAP)		+= omap.o
 obj-$(CONFIG_MMC_AT91RM9200)	+= at91_mci.o
+obj-$(CONFIG_MMC_MAGICBOX)	+= magicbox_mmc.o
 
 mmc_core-y := mmc.o mmc_queue.o mmc_sysfs.o
 
