--- a/src/linux/magicbox/linux-2.6.17/drivers/ide/Kconfig
+++ b/src/linux/magicbox/linux-2.6.17/drivers/ide/Kconfig
@@ -949,6 +949,14 @@ config BLK_DEV_MAGICBOX_IDE
 
 	  If unsure, say N.
 
+config BLK_DEV_MAGICBOX_IDE
+	bool "MagicBox 2.0 CF IDE support"
+	depends on 4xx && IDE=y && BLK_DEV_IDE=y
+	help
+	  This option provides support for IDE on MagicBox 2.0 boards.
+
+	  If unsure, say N.
+
 choice
 	prompt "Type of MPC8xx IDE interface"
 	depends on BLK_DEV_MPC8xx_IDE
