--- a/src/linux/brcm/linux.v23/drivers/net/switch/Makefile
+++ b/src/linux/brcm/linux.v23/drivers/net/switch/Makefile
@@ -3,6 +3,7 @@
 #
 # Makefile for the Linux Wireless network device drivers.
 #
+EXTRA_CFLAGS := -I$(TOPDIR)/arch/mips/bcm947xx/include
 
 
 O_TARGET := broadcom_switch.o
