--- a/src/linux/brcm/linux.v23/net/802/Makefile
+++ b/src/linux/brcm/linux.v23/net/802/Makefile
@@ -34,6 +34,7 @@ obj-$(CONFIG_IPX)	+= p8022.o psnap.o
 
 obj-$(CONFIG_ATALK)	+= p8022.o psnap.o
 
+obj-$(CONFIG_CDP) 	+= p8022.o psnap.o
 
 include $(TOPDIR)/Rules.make
 
