--- a/src/linux/brcm/linux.v23/.config
+++ b/src/linux/brcm/linux.v23/.config
@@ -76,7 +76,7 @@ CONFIG_BCM4710=y
 CONFIG_BCM4310=y
 CONFIG_BCM4704=y
 CONFIG_BCM5365=y
-CONFIG_REGISTER=y
+# CONFIG_REGISTER is not set
 # CONFIG_SNI_RM200_PCI is not set
 # CONFIG_TANBAC_TB0226 is not set
 # CONFIG_TANBAC_TB0229 is not set
