use autogen to generate
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@34940 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: efd72979752ab4dd6ff87b64dfb308a40b10a346

--- a/src/router/zfs/tools/lib/libspl/include/Makefile.in
+++ b/src/router/zfs/tools/lib/libspl/include/Makefile.in
@@ -86,89 +86,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/config/always-arch.m4 \
 	$(top_srcdir)/config/always-no-bool-compare.m4 \
 	$(top_srcdir)/config/always-no-unused-but-set-variable.m4 \
-	$(top_srcdir)/config/kernel-acl.m4 \
-	$(top_srcdir)/config/kernel-aio-fsync.m4 \
-	$(top_srcdir)/config/kernel-automount.m4 \
-	$(top_srcdir)/config/kernel-bdev-block-device-operations.m4 \
-	$(top_srcdir)/config/kernel-bdev-logical-size.m4 \
-	$(top_srcdir)/config/kernel-bdev-physical-size.m4 \
-	$(top_srcdir)/config/kernel-bdi.m4 \
-	$(top_srcdir)/config/kernel-bio-bvec-iter.m4 \
-	$(top_srcdir)/config/kernel-bio-end-io-t-args.m4 \
-	$(top_srcdir)/config/kernel-bio-failfast.m4 \
-	$(top_srcdir)/config/kernel-bio-op.m4 \
-	$(top_srcdir)/config/kernel-bio-rw-barrier.m4 \
-	$(top_srcdir)/config/kernel-bio-rw-discard.m4 \
-	$(top_srcdir)/config/kernel-bio_set_dev.m4 \
-	$(top_srcdir)/config/kernel-blk-queue-bdi.m4 \
-	$(top_srcdir)/config/kernel-blk-queue-flush.m4 \
-	$(top_srcdir)/config/kernel-blk-queue-max-hw-sectors.m4 \
-	$(top_srcdir)/config/kernel-blk-queue-max-segments.m4 \
-	$(top_srcdir)/config/kernel-blk-queue-unplug.m4 \
-	$(top_srcdir)/config/kernel-blkdev-get-by-path.m4 \
-	$(top_srcdir)/config/kernel-blkdev-get.m4 \
-	$(top_srcdir)/config/kernel-block-device-operations-release-void.m4 \
-	$(top_srcdir)/config/kernel-clear-inode.m4 \
-	$(top_srcdir)/config/kernel-commit-metadata.m4 \
-	$(top_srcdir)/config/kernel-create-nameidata.m4 \
-	$(top_srcdir)/config/kernel-current-time.m4 \
-	$(top_srcdir)/config/kernel-current_bio_tail.m4 \
-	$(top_srcdir)/config/kernel-d-make-root.m4 \
-	$(top_srcdir)/config/kernel-d-obtain-alias.m4 \
-	$(top_srcdir)/config/kernel-d-prune-aliases.m4 \
-	$(top_srcdir)/config/kernel-declare-event-class.m4 \
-	$(top_srcdir)/config/kernel-dentry-operations.m4 \
-	$(top_srcdir)/config/kernel-dirty-inode.m4 \
-	$(top_srcdir)/config/kernel-discard-granularity.m4 \
-	$(top_srcdir)/config/kernel-elevator-change.m4 \
-	$(top_srcdir)/config/kernel-encode-fh-inode.m4 \
-	$(top_srcdir)/config/kernel-evict-inode.m4 \
-	$(top_srcdir)/config/kernel-fallocate.m4 \
-	$(top_srcdir)/config/kernel-file-dentry.m4 \
-	$(top_srcdir)/config/kernel-file-inode.m4 \
-	$(top_srcdir)/config/kernel-fmode-t.m4 \
-	$(top_srcdir)/config/kernel-follow-down-one.m4 \
-	$(top_srcdir)/config/kernel-fpu.m4 \
-	$(top_srcdir)/config/kernel-fsync.m4 \
-	$(top_srcdir)/config/kernel-generic_io_acct.m4 \
-	$(top_srcdir)/config/kernel-generic_readlink.m4 \
-	$(top_srcdir)/config/kernel-get-disk-ro.m4 \
-	$(top_srcdir)/config/kernel-get-gendisk.m4 \
-	$(top_srcdir)/config/kernel-get-link.m4 \
-	$(top_srcdir)/config/kernel-inode-getattr.m4 \
-	$(top_srcdir)/config/kernel-inode-set-flags.m4 \
-	$(top_srcdir)/config/kernel-insert-inode-locked.m4 \
-	$(top_srcdir)/config/kernel-invalidate-bdev-args.m4 \
-	$(top_srcdir)/config/kernel-is_owner_or_cap.m4 \
-	$(top_srcdir)/config/kernel-kmap-atomic-args.m4 \
-	$(top_srcdir)/config/kernel-kuid-helpers.m4 \
-	$(top_srcdir)/config/kernel-lookup-bdev.m4 \
-	$(top_srcdir)/config/kernel-lookup-nameidata.m4 \
-	$(top_srcdir)/config/kernel-lseek-execute.m4 \
-	$(top_srcdir)/config/kernel-mk-request-fn.m4 \
-	$(top_srcdir)/config/kernel-mkdir-umode-t.m4 \
-	$(top_srcdir)/config/kernel-mod-param.m4 \
-	$(top_srcdir)/config/kernel-mount-nodev.m4 \
-	$(top_srcdir)/config/kernel-objtool.m4 \
-	$(top_srcdir)/config/kernel-open-bdev-exclusive.m4 \
-	$(top_srcdir)/config/kernel-put-link.m4 \
-	$(top_srcdir)/config/kernel-rename.m4 \
-	$(top_srcdir)/config/kernel-security-inode-init.m4 \
-	$(top_srcdir)/config/kernel-set-nlink.m4 \
-	$(top_srcdir)/config/kernel-setattr-prepare.m4 \
-	$(top_srcdir)/config/kernel-sget-args.m4 \
-	$(top_srcdir)/config/kernel-show-options.m4 \
-	$(top_srcdir)/config/kernel-shrink.m4 \
-	$(top_srcdir)/config/kernel-submit_bio.m4 \
-	$(top_srcdir)/config/kernel-super-userns.m4 \
-	$(top_srcdir)/config/kernel-tmpfile.m4 \
-	$(top_srcdir)/config/kernel-truncate-range.m4 \
-	$(top_srcdir)/config/kernel-truncate-setsize.m4 \
-	$(top_srcdir)/config/kernel-vfs-iterate.m4 \
-	$(top_srcdir)/config/kernel-vfs-rw-iterate.m4 \
-	$(top_srcdir)/config/kernel-vm_node_stat.m4 \
-	$(top_srcdir)/config/kernel-xattr-handler.m4 \
-	$(top_srcdir)/config/kernel.m4 $(top_srcdir)/config/libtool.m4 \
+	$(top_srcdir)/config/libtool.m4 \
 	$(top_srcdir)/config/ltoptions.m4 \
 	$(top_srcdir)/config/ltsugar.m4 \
 	$(top_srcdir)/config/ltversion.m4 \
@@ -361,8 +279,6 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-KERNELCPPFLAGS = @KERNELCPPFLAGS@
-KERNELMAKE_PARAMS = @KERNELMAKE_PARAMS@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBATTR = @LIBATTR@
@@ -374,10 +290,6 @@ LIBTIRPC_CFLAGS = @LIBTIRPC_CFLAGS@
 LIBTOOL = @LIBTOOL@
 LIBUDEV = @LIBUDEV@
 LIBUUID = @LIBUUID@
-LINUX = @LINUX@
-LINUX_OBJ = @LINUX_OBJ@
-LINUX_SYMBOLS = @LINUX_SYMBOLS@
-LINUX_VERSION = @LINUX_VERSION@
 LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
@@ -402,9 +314,6 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
-QAT_OBJ = @QAT_OBJ@
-QAT_SRC = @QAT_SRC@
-QAT_SYMBOLS = @QAT_SYMBOLS@
 RANLIB = @RANLIB@
 RELEASE = @RELEASE@
 RM = @RM@
@@ -420,10 +329,6 @@ RPM_VERSION = @RPM_VERSION@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
-SPL = @SPL@
-SPL_OBJ = @SPL_OBJ@
-SPL_SYMBOLS = @SPL_SYMBOLS@
-SPL_VERSION = @SPL_VERSION@
 SRPM_DEFINE_COMMON = @SRPM_DEFINE_COMMON@
 SRPM_DEFINE_DKMS = @SRPM_DEFINE_DKMS@
 SRPM_DEFINE_KMOD = @SRPM_DEFINE_KMOD@
