tools configure and install
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@34947 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: d1b274b87d2a89d405024a9f874404503ed6afe0

--- a/src/router/spl/Makefile
+++ b/src/router/spl/Makefile
@@ -15,6 +15,6 @@ clean:
 
 install:
 	$(MAKE) -C $(LINUXDIR) SUBDIRS=`pwd` CROSS_COMPILE="ccache $(ARCH)-linux-uclibc-" O=$(LINUXDIR) INSTALL_MOD_PATH=$(INSTALLDIR) INSTALL_MOD_DIR=extra modules_install
-	rm -f $(INSTALLDIR)/spl/lib/modules/$(KERNELRELEASE)/modules.*
+	rm -f $(INSTALLDIR)/lib/modules/$(KERNELRELEASE)/modules.*
 
 all: modules
