--- a/src/router/Makefile.mvebu
+++ b/src/router/Makefile.mvebu
@@ -142,6 +142,12 @@ kernel:
 	-$(MAKE) -f Makefile.mvebu batman-adv-install
 	-$(MAKE) -f Makefile.mvebu opendpi
 	-$(MAKE) -f Makefile.mvebu opendpi-install
+ifeq ($(CONFIG_ZFS),y)
+	-$(MAKE) -f Makefile.mvebu spl
+	-$(MAKE) -f Makefile.mvebu spl-install
+	-$(MAKE) -f Makefile.mvebu zfs
+	-$(MAKE) -f Makefile.mvebu zfs-install
+endif
 ifeq ($(CONFIG_WIREGUARD),y)
 	-$(MAKE) -f Makefile.mvebu wireguard
 	-$(MAKE) -f Makefile.mvebu wireguard-install
