in this way the ko files get moved in the correct folder at the end
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@34956 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: 9011c31678ac05fad175c7091405e16dec57a458

--- a/src/router/spl/Makefile
+++ b/src/router/spl/Makefile
@@ -1,7 +1,7 @@
 subdir-m += spl
 subdir-m += splat
 
-INSTALL_MOD_DIR ?= extra
+INSTALL_MOD_DIR = kernel/extra
 
 SPL_MODULE_CFLAGS  = -I$(TOP)/spl/include
 SPL_MODULE_CFLAGS += -include $(TOP)/spl/spl_config.h
