required for some buildsystems
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@34962 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: 5263f6c1a25cbe87c8900bb358cb3609c5ccef91

--- a/src/router/zfs/tools/raidz_test/Makefile.am
+++ b/src/router/zfs/tools/raidz_test/Makefile.am
@@ -19,4 +19,6 @@ raidz_test_LDADD = \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la
 
-raidz_test_LDADD += -lm -ldl
+raidz_test_LDADD += -lm -ldl -ltirpc
+
+raidz_test_LDFLAGS = -rpath $(TOP)/util-linux/.libs
