--- a/src/router/zfs/tools/zed/Makefile.am
+++ b/src/router/zfs/tools/zed/Makefile.am
@@ -46,9 +46,9 @@ zed_LDADD = \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la \
-	$(top_builddir)/lib/libzfs_core/libzfs_core.la
+	$(top_builddir)/lib/libzfs_core/libzfs_core.la -ltirpc
 
-zed_LDFLAGS = -lrt -pthread
+zed_LDFLAGS = -lrt -pthread -rpath $(TOP)/util-linux/.libs
 
 zedconfdir = $(sysconfdir)/zfs/zed.d
 
