--- a/src/router/zfs/tools/zpool/Makefile.am
+++ b/src/router/zfs/tools/zpool/Makefile.am
@@ -19,7 +19,9 @@ zpool_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la \
 	$(top_builddir)/lib/libzfs_core/libzfs_core.la \
-	-lm $(LIBBLKID)
+	-lm $(LIBBLKID) -ltirpc 
+
+zpool_LDFLAGS = -rpath $(TOP)/util-linux/.libs
 
 zpoolconfdir = $(sysconfdir)/zfs/zpool.d
 zpoolexecdir = $(libexecdir)/zfs/zpool.d
