--- a/src/router/zfs/tools/ztest/Makefile.am
+++ b/src/router/zfs/tools/ztest/Makefile.am
@@ -21,4 +21,7 @@ ztest_LDADD = \
 	$(top_builddir)/lib/libzfs/libzfs.la \
 	$(top_builddir)/lib/libzfs_core/libzfs_core.la
 
-ztest_LDADD += -lm
+ztest_LDADD += -lm -ltirpc
+
+ztest_LDFLAGS = -rpath $(TOP)/util-linux/.libs
+
