--- a/src/router/zfs/tools/zdb/Makefile.am
+++ b/src/router/zfs/tools/zdb/Makefile.am
@@ -17,4 +17,6 @@ zdb_LDADD = \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la \
-	$(top_builddir)/lib/libzfs_core/libzfs_core.la
+	$(top_builddir)/lib/libzfs_core/libzfs_core.la -ltirpc
+
+zdb_LDFLAGS = -rpath $(TOP)/util-linux/.libs
