--- a/src/router/zfs/tools/zinject/Makefile.am
+++ b/src/router/zfs/tools/zinject/Makefile.am
@@ -16,4 +16,6 @@ zinject_LDADD = \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la \
-	$(top_builddir)/lib/libzfs_core/libzfs_core.la
+	$(top_builddir)/lib/libzfs_core/libzfs_core.la -ltirpc
+
+zinject_LDFLAGS = -rpath $(TOP)/util-linux/.libs
