--- a/src/router/zfs/tools/zstreamdump/Makefile.am
+++ b/src/router/zfs/tools/zstreamdump/Makefile.am
@@ -14,4 +14,6 @@ zstreamdump_LDADD = \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la \
-	$(top_builddir)/lib/libzfs_core/libzfs_core.la
+	$(top_builddir)/lib/libzfs_core/libzfs_core.la -ltirpc
+
+zstreamdump_LDFLAGS = -rpath $(TOP)/util-linux/.libs
