must disable static
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@34970 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: 42998b04a700934d59a0b6548a289671083a3802

--- a/src/router/zfs/Makefile
+++ b/src/router/zfs/Makefile
@@ -20,7 +20,7 @@ all: modules
 
 configure:
 	cd tools/libtirpc && ./bootstrap
-	cd tools/libtirpc && ./configure --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF" LDFLAGS="-L$(TOP)/zlib" --disable-gssapi --prefix=/usr
+	cd tools/libtirpc && ./configure --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF" LDFLAGS="-L$(TOP)/zlib" --disable-gssapi --disable-static --prefix=/usr
 	make -C tools/libtirpc
 # for bootstrapping
 	cd tools && ./autogen.sh
